cmake_minimum_required(VERSION 2.8)
project(STL_vector)
add_executable(1.deque_construct 1.deque_construct.cpp)
add_executable(2.deque_assign 2.deque_assign.cpp)
add_executable(3.deque_size 3.deque_size.cpp)
add_executable(4.deque_insert_erase 4.deque_insert_erase.cpp)
add_executable(5.deque_read_write 5.deque_read_write.cpp)
add_executable(6.deque_sort 6.deque_sort.cpp)
add_executable(7.deque_demo 7.deque_demo.cpp)







