cmake_minimum_required(VERSION 2.8)
project(STL_list)
add_executable(1.list_construct 1.list_construct.cpp)
add_executable(2.list_assign_swap 2.list_assign_swap.cpp)
add_executable(3.list_size 3.list_size.cpp)
add_executable(4.list_insert_erase 4.list_insert_erase.cpp)
add_executable(5.list_front_back  5.list_front_back.cpp)
add_executable(6.list_reverse_sort  6.list_reverse_sort.cpp)
add_executable(7.list_demo  7.list_demo.cpp)



