cmake_minimum_required(VERSION 2.8)
project(CPP_string)
add_executable(1.string_construct 1.string_construct.cpp)
add_executable(2.string_assign 2.string_assign.cpp)
add_executable(3.string_append 3.string_append.cpp)
add_executable(4.string_find_replace 4.string_find_replace.cpp)
add_executable(5.string_compare 5.string_compare.cpp)
add_executable(6.string_read_write 6.string_read_write.cpp)
add_executable(7.string_insert_erase 7.string_insert_erase.cpp)
add_executable(8.string_substr 8.string_substr.cpp)