cmake_minimum_required(VERSION 2.8)
project(STL_vector)
add_executable(1.1_vector_int 1.1_vector_int.cpp)
add_executable(1.2_vector_person 1.2_vector_person.cpp)
add_executable(1.3_vector_vector 1.3_vector_vector.cpp)
add_executable(2.vector_construct 2.vector_construct.cpp)
add_executable(3.vector_assign 3.vector_assign.cpp)
add_executable(4.vector_capacity_and_size 4.vector_capacity_and_size.cpp)
add_executable(5.vector_inset_erase 5.vector_inset_erase.cpp)
add_executable(6.vector_read_write 6.vector_read_write.cpp)
add_executable(7.vector_swap 7.vector_swap.cpp)
add_executable(8.vector_reserve 8.vector_reserve.cpp)









